Fix image distortion on product pages

--- a/public/CSS/navbar.css
+++ b/public/CSS/navbar.css
@@ -47,8 +47,22 @@
     height: 780px;
 }
 
+.productShow-item {
+    height: 440px;
+    width: 405px;
+}
+
+.productMain-item {
+    height: 440px;
+}
+
+.packageMain-item {
+    height: 240px;
+}
+
 .c-img{
    height: 100%;
+   width: 100%;
    object-fit: cover;
 }
 
